--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Freedom</title>
     <link rel="stylesheet" href="base/style/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
@@ -91,6 +92,10 @@
                 <input type="text" placeholder="Поиск">
                 <img src="base/img/search-logo.svg" alt="">
             </form>
+            <div class="mobile-menu__buttons">
+                <a class="colored-button" href="#">Sign Up</a>
+                <a class="transparent-button" href="#">Login</a>
+            </div>
             <nav class="mobile-menu__list">
                 <ul>
                     <li><a href="#">Catalogue</a></li>
