--- a/index.html
+++ b/index.html
@@ -141,7 +141,11 @@
                     </div>
                 </div>
                 <div class="investments__img">
-                    <img src="base/img/investments1.png" alt="">
+                    <picture>
+                        <source srcset="base/img/investments1-mini.png" media="(max-width: 992px)">
+                        <source srcset="base/img/investments1.png">
+                        <img srcset="base/img/investments1.png" alt="">
+                    </picture>
                     <img src="base/img/investments2.png" alt="">
                 </div>
             </div>
@@ -161,7 +165,11 @@
     <section id="Quick-start">
         <div class="container">
             <div class="quick-start">
-                <img src="base/img/quick-start.png" alt="">
+                <picture>
+                    <source srcset="base/img/quick-start-mini.png" media="(max-width: 992px)">
+                    <source srcset="base/img/quick-start.png">
+                    <img srcset="base/img/quick-start.png" alt="">
+                </picture>
                 <div class="quick-start__description">
                     <h3>Быстро и удобно</h3>
                     <ul>
@@ -192,7 +200,11 @@
                     </div>
                     <a href="#" class="colored-button">Подробнее о IPO</a>
                 </div>
-                <img src="base/img/ipo.png" alt="">
+                <picture>
+                    <source srcset="base/img/ipo-mini.png" media="(max-width: 992px)">
+                    <source srcset="base/img/ipo.png">
+                    <img srcset="base/img/ipo.png" alt="">
+                </picture>
             </div>
         </div>
     </section>
@@ -206,7 +218,11 @@
                     <p>Совершайте торговые операции с 40 000+ ценных бумаг на крупнейших биржах Америки, Европы и Азии. Без комиссии, абонентской платы и скрытых платежей.</p>
                     <a href="#" class="colored-button">Подробнее</a>
                 </div>
-                <img src="base/img/etf.png" alt="">
+                <picture>
+                    <source srcset="base/img/etf-mini.png" media="(max-width: 992px)">
+                    <source srcset="base/img/etf.png">
+                    <img srcset="base/img/etf.png" alt="">
+                </picture>
             </div>
         </div>
     </section>
@@ -220,7 +236,11 @@
                     <p>Храните доллары под 3% годовых на накопительном D-счете. Доходность начисляется ежедневно.</p>
                     <a href="#" class="colored-button">Подробнее о D-счёте</a>
                 </div>
-                <img src="base/img/deposit.png" alt="">
+                <picture>
+                    <source srcset="base/img/deposit-mini.png" media="(max-width: 992px)">
+                    <source srcset="base/img/deposit.png">
+                    <img srcset="base/img/deposit.png" alt="">
+                </picture>
             </div>
         </div>
     </section>
@@ -232,7 +252,11 @@
                     <p>Нравится Freedom24? Приглашайте друзей и подписчиков и получайте вознаграждение за их торговую активность. Ваша партнерская программа активируется сразу после открытия счета!</p>
                     <a href="#" class="colored-button">Открыть счёт</a>
                 </div>
-                <img src="base/img/sentence.png" alt="">
+                <picture>
+                    <source srcset="base/img/sentence-mini.png" media="(max-width: 992px)">
+                    <source srcset="base/img/sentence.png">
+                    <img srcset="base/img/sentence.png" alt="">
+                </picture>
             </div>
         </div>
     </section>
