--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="investments__img">
                     <picture>
-                        <source srcset="base/img/investments1-mini.png" media="(max-width: 992px)">
+                        <source srcset="base/img/investments1-mini.png" media="(max-width: 768px)">
                         <source srcset="base/img/investments1.png">
                         <img srcset="base/img/investments1.png" alt="">
                     </picture>
@@ -166,7 +166,7 @@
         <div class="container">
             <div class="quick-start">
                 <picture>
-                    <source srcset="base/img/quick-start-mini.png" media="(max-width: 992px)">
+                    <source srcset="base/img/quick-start-mini.png" media="(max-width: 768px)">
                     <source srcset="base/img/quick-start.png">
                     <img srcset="base/img/quick-start.png" alt="">
                 </picture>
@@ -201,7 +201,7 @@
                     <a href="#" class="colored-button">Подробнее о IPO</a>
                 </div>
                 <picture>
-                    <source srcset="base/img/ipo-mini.png" media="(max-width: 992px)">
+                    <source srcset="base/img/ipo-mini.png" media="(max-width: 768)">
                     <source srcset="base/img/ipo.png">
                     <img srcset="base/img/ipo.png" alt="">
                 </picture>
@@ -219,7 +219,7 @@
                     <a href="#" class="colored-button">Подробнее</a>
                 </div>
                 <picture>
-                    <source srcset="base/img/etf-mini.png" media="(max-width: 992px)">
+                    <source srcset="base/img/etf-mini.png" media="(max-width: 768px)">
                     <source srcset="base/img/etf.png">
                     <img srcset="base/img/etf.png" alt="">
                 </picture>
@@ -237,7 +237,7 @@
                     <a href="#" class="colored-button">Подробнее о D-счёте</a>
                 </div>
                 <picture>
-                    <source srcset="base/img/deposit-mini.png" media="(max-width: 992px)">
+                    <source srcset="base/img/deposit-mini.png" media="(max-width: 768px)">
                     <source srcset="base/img/deposit.png">
                     <img srcset="base/img/deposit.png" alt="">
                 </picture>
@@ -253,7 +253,7 @@
                     <a href="#" class="colored-button">Открыть счёт</a>
                 </div>
                 <picture>
-                    <source srcset="base/img/sentence-mini.png" media="(max-width: 992px)">
+                    <source srcset="base/img/sentence-mini.png" media="(max-width: 768px)">
                     <source srcset="base/img/sentence.png">
                     <img srcset="base/img/sentence.png" alt="">
                 </picture>
