--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Freedom</title>
     <link rel="stylesheet" href="base/style/style.css">
+    <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
